--- a/first/index.html
+++ b/first/index.html
@@ -109,7 +109,7 @@
 
 
   
-      <a class="blog-logo" href="http://localhost:1313/"><img src="http://localhost:1313/images/logo.png" alt="Home" /></a>
+      <a class="blog-logo" href="http://localhost:1313/"><img src="http://localhost:1313/images/faisalProfile.jpg" alt="Home" /></a>
   
   
       <a class="menu-button" href="#"><span class="burger">&#9776;</span><span class="word">Menu</span></a>
@@ -149,7 +149,7 @@
 
     
     <figure class="author-image">
-        <a class="img" href="http://localhost:1313/" style="background-image: url(http://localhost:1313/images/logo.png)"><span class="hidden">Faisal K K's Picture</span></a>
+        <a class="img" href="http://localhost:1313/" style="background-image: url(http://localhost:1313/images/faisalProfile.jpg)"><span class="hidden">Faisal K K's Picture</span></a>
     </figure>
     
 
