--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	  <link rel="apple-touch-icon" href="http://localhost:1313/images/apple-touch-icon.png" />
     
     <link rel="stylesheet" type="text/css" href="http://localhost:1313/css/screen.css" />
+    <link rel="stylesheet" type="text/css" href="http://localhost:53704/css/genericons.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata" />
 
 
