--- a/404.html
+++ b/404.html
@@ -25,7 +25,10 @@
     <link rel="shortcut icon" href="http://kkfaisal.github.io/images/favicon.ico">
 	  <link rel="apple-touch-icon" href="http://kkfaisal.github.io/images/apple-touch-icon.png" />
     
+
+    
     <link rel="stylesheet" type="text/css" href="http://kkfaisal.github.io/css/screen.css" />
+       <link rel="stylesheet" type="text/css" href="http://kkfaisal.github.io/css/genericons.css" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400|Inconsolata" />
 
 
